[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/config/config_templates/component_config_line_edit_int.gd" type="Script" id=1]
[ext_resource path="res://components/shared/int_spinbox_big.gd" type="Script" id=2]
[ext_resource path="res://components/elements/Styled/IconButton.tscn" type="PackedScene" id=3]

[node name="IntSpinnerBig" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1815.0
margin_bottom = -1047.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )

[node name="IntEdit" type="LineEdit" parent="."]
margin_right = 105.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="MinusButton" parent="." instance=ExtResource( 3 )]
margin_left = 109.0
margin_right = 142.0
text = "-"
icon_tex = null

[node name="PlusButton" parent="." instance=ExtResource( 3 )]
margin_left = 146.0
margin_right = 180.0
text = "+"
icon_tex = null

[node name="ChangeTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="button_down" from="MinusButton" to="." method="_on_MinusButton_button_down"]
[connection signal="button_up" from="MinusButton" to="." method="_on_MinusButton_button_up"]
[connection signal="mouse_exited" from="MinusButton" to="." method="_on_MinusButton_mouse_exited"]
[connection signal="button_down" from="PlusButton" to="." method="_on_PlusButton_button_down"]
[connection signal="button_up" from="PlusButton" to="." method="_on_PlusButton_button_up"]
[connection signal="mouse_exited" from="PlusButton" to="." method="_on_PlusButton_mouse_exited"]
[connection signal="timeout" from="ChangeTimer" to="." method="_on_ChangeTimer_timeout"]
